--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 
-# ?? ?? ?? ??(?? info)
-# logging.level.root=info
 
-# hello.springmvc ???? ? ?? ?? ?? ??
+# logging.level.root=info
 logging.level.hello.springmvc=debug
+
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
